chore(deploy): prep for production with dynamic CORS and PostgreSQL support